k8s/frontend/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-react-nginx
  namespace: fullstack-app
spec:
  selector:
    app: client-react-nginx
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
